# SysY-compiler

./: .gitignore  Cargo.toml  build.rs  get_data.py  run_koopa.sh  run_rv.sh  test.sh
examples/koopa_run/: main.rs
src/: ast.rs  koopa_gen.rs  lib.rs  main.rs  pg.rs  semantics.rs  sym_table.rs  sysy.lalrpop  utils.rs
src/ast/: basic.rs  expr.rs  prog.rs
src/koopa_gen/: ast.rs  gen.rs  mod.rs  sym_table.rs
src/riscv_gen/: frame_manager.rs  gen.rs  mod.rs  reg_allocators.rs  riscv_isa.rs  rtvalue.rs
src/riscv_gen/reg_allocators/: crazy_spiller.rs  first_come_first_serve.rs  greedy.rs  mod.rs
src/utils/: arena.rs  dfs.rs  interpreter.rs  mod.rs  uuid_mapper.rs
src/utils/interpreter/: ext_funcs.rs
tests/: ast_test.rs  const_test.rs  koopa_test.rs
tests/test_prog/: complex.y  easy_init.c  hello.y
