[package]
name = "sysy-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
koopa = { version = "0.0.7" }
clap = { version = "4.4.18", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"]}
lazy_static = "1.4.0"
libloading = "0.7"
